@@ -5,6 +5,7 @@ Updates to RuleChain to honor RuleSet exclude-pattern
 Upgrading UselessOperationOnImmutable to detect more use cases, especially on String
 Fixed bug 1988829 - Violation reported without source file name (actually a fix to ConsecutiveLiteralAppends)
 Fixed bug 1989814 - false +: ConsecutiveLiteralAppends
+Fixed bug 1977230 - false positive: UselessOverridingMethod
 
 New rule:
 	Basic ruleset:	EmptyInitializer
